# hrrr-parser

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: icechunk.ipynb  icechunk_region.ipynb  icechunk_s3.ipynb  manifeststore.ipynb  sfc.ipynb  surface_local.ipynb
hrrrparser/: __init__.py  parser.py
hrrrparser/codecs/: __init__.py  hrrr_gribberish.py
tests/: test_parser.py
